--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -7,7 +7,7 @@
         <item name="colorAccent">@color/colorAccent</item>
     </style>
     <style name="SplashTheme" parent="AppTheme">
-        <item name="android:background">@drawable/splash_screen</item>
+        <item name="android:windowBackground">@drawable/splash_screen</item>
 
     </style>
 
